--- a/pikaron/slideweuni/adm/style/css/admin_forms.css
+++ b/pikaron/slideweuni/adm/style/css/admin_forms.css
@@ -34,11 +34,14 @@ Buttons
 	top: 0.1em;
 }
 
-
 /* ---------
 Selects
 --------- */
-select, select#sk, select#sd, select#fc, select#fb {
+select,
+select#sk,
+select#sd,
+select#fc,
+select#fb {
 	border: 1px solid #AAA;
 	border-radius: 0.5em;
 	color: #1D444E;
@@ -55,88 +58,90 @@ select, select#sk, select#sd, select#fc, select#fb {
 	width: auto;
 }
 
-select, select#sk, select#sd, select#fc, select#fb {
+select,
+select#sk,
+select#sd,
+select#fc,
+select#fb {
 	box-shadow: 0.15em 0.2em 0em 0em #899599;
 }
-
 
 /* ---------
 Text
 --------- */
-.textbox, .textbox2 {
-    padding: 0.1em 0.625em;
-    border: 1px solid #BFBFBF;
-    height: 2em;
-    width: auto;
-    border-radius: 0.5em;
-    outline: 0;
+.textbox,
+.textbox2 {
+	padding: 0.1em 0.625em;
+	border: 1px solid #BFBFBF;
+	height: 2em;
+	width: auto;
+	border-radius: 0.5em;
+	outline: 0;
 }
 
 .textbox {
-    box-shadow: 0.1em 0.1em 0 0 #FFF, 0.5em 0.5em 2.5em 0.2em #BBB inset;
+	box-shadow: 0.1em 0.1em 0 0 #FFF, 0.5em 0.5em 2.5em 0.2em #BBB inset;
 }
-
 
 /* ----------
 Radio buttons
 ---------- */
 input[type=radio] {
-    display: none;
+	display: none;
 }
 
 input[type=radio] + label {
-    display: inline-block;
-    margin: -1px;
-    padding: 1px 10px;
-    margin-bottom: 0;
-    font-family: Arial;
+	display: inline-block;
+	margin: -1px;
+	padding: 1px 10px;
+	margin-bottom: 0;
+	font-family: Arial;
 	font-size: 12px;
-    line-height: 20px;
-    color: #000000;
-    text-align: center;
-    text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.75);
-    vertical-align: middle;
-    cursor: pointer;
-    background-color: #C8C7C4;
-    background-image: linear-gradient(to bottom, #FFFFFF, #E6E6E6);
-    background-repeat: repeat-x;
-    border: 1px solid #ccc;
-    border-color: #e6e6e6 #e6e6e6 #bfbfbf;
-    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-    border-bottom-color: #b3b3b3;
+	line-height: 20px;
+	color: #000000;
+	text-align: center;
+	text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.75);
+	vertical-align: middle;
+	cursor: pointer;
+	background-color: #C8C7C4;
+	background-image: linear-gradient(to bottom, #FFFFFF, #E6E6E6);
+	background-repeat: repeat-x;
+	border: 1px solid #ccc;
+	border-color: #e6e6e6 #e6e6e6 #bfbfbf;
+	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+	border-bottom-color: #b3b3b3;
 	border-radius: 0.5em;
-    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
 }
 
 input[type=radio]:checked + label {
-    background-image: none;
-    outline: 0;
+	background-image: none;
+	outline: 0;
 	font-weight: bold;
-    box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05);
+	box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05);
 	color:#FFFFFF;
 }
 
 input[type=radio]:checked + label[class=set] {
-    background-color: #429f21;
+	background-color: #429f21;
 }
 
 input[type=radio]:checked + label[class=unset] {
-    background-color: #FF3D3D;
+	background-color: #FF3D3D;
 }
-
 
 /* ----------
 Checkbox
 ---------- */
 .checkbox {
-    display: inline-block;
-    position: relative;
-    text-align: left;
-    width: 50px;
-    height: 20px;
-    background-color: #C9C9C9;
-    overflow: hidden;
-    border-radius: 20px;
+	display: inline-block;
+	position: relative;
+	text-align: left;
+	width: 50px;
+	height: 20px;
+	background-color: #C9C9C9;
+	overflow: hidden;
+	border-radius: 20px;
 }
 
 .rtl .checkbox {
@@ -144,43 +149,43 @@ Checkbox
 }
 
 .checkbox input {
-    display: block;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: auto;
-    margin: 0 0;
-    cursor: pointer;
-    opacity:0;
-    z-index: 2;
+	display: block;
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: auto;
+	margin: 0 0;
+	cursor: pointer;
+	opacity:0;
+	z-index: 2;
 }
 
 .checkbox label {
-    background-color: #FF3D3D;
-    background-image: linear-gradient(-40deg,rgba(0,0,0,0),rgba(255,255,255,0.1),rgba(0,0,0,0.2));
-    box-shadow: 0 0 0 1px rgba(0,0,0,0.1),0 1px 2px rgba(0,0,0,0.7);
-    border-radius: 20px;
-    display: inline-block;
-    width: 20px;
-    text-align: center;
-    font: bold 13px/normal Arial, Sans-Serif;
-    color: #FFFFFF;
-    text-shadow: 0 -1px 0 rgba(0,0,0,0.7);
-    transition: margin-left 0.2s ease-in-out;
-    margin: 1px;
+	background-color: #FF3D3D;
+	background-image: linear-gradient(-40deg,rgba(0,0,0,0),rgba(255,255,255,0.1),rgba(0,0,0,0.2));
+	box-shadow: 0 0 0 1px rgba(0,0,0,0.1),0 1px 2px rgba(0,0,0,0.7);
+	border-radius: 20px;
+	display: inline-block;
+	width: 20px;
+	text-align: center;
+	font: bold 13px/normal Arial, Sans-Serif;
+	color: #FFFFFF;
+	text-shadow: 0 -1px 0 rgba(0,0,0,0.7);
+	transition: margin-left 0.2s ease-in-out;
+	margin: 1px;
 }
 
 .checkbox label:before {
-    content: attr(data-off);
+	content: attr(data-off);
 }
 
 .checkbox input:checked + label {
-    margin-left: 28px;
-    background-color: #429F21;
-    color: #FFFFFF;
+	margin-left: 28px;
+	background-color: #429F21;
+	color: #FFFFFF;
 }
 
 .rtl .checkbox input:checked + label {
@@ -189,28 +194,30 @@ Checkbox
 }
 
 .checkbox input:checked + label:before {
-    content: attr(data-on);
+	content: attr(data-on);
 }
-
 
 /* ---------
 Label
 --------- */
-dd label{
+dd label {
 	margin-left: 10px;
 }
 
-
-.rtl dd label{
+.rtl dd label {
 	margin-left: 0px;
 	margin-right: 10px;
 }
 
-
 /* ---------
 Pagination
 --------- */
-.pagination li a, .pagnation li span, li .pagination li a, li .pagnation li span, .pagination li.active span, .pagination li.ellipsis span {
+.pagination li a,
+.pagnation li span,
+li .pagination li a,
+li .pagnation li span,
+.pagination li.active span,
+.pagination li.ellipsis span {
 	box-shadow: 0.15em 0.2em 0em 0em #899599;
 	background: linear-gradient(to bottom, #ededed 5%, #bab1ba 100%);
 	background-color: #ededed;
@@ -226,11 +233,11 @@ Pagination
 	background: linear-gradient(to bottom, #99CC00 5%, #336600 100%);
 }
 
-
 /* ---------
 Panels
 --------- */
-.head-panel, .head-panel-error {
+.head-panel,
+.head-panel-error {
 	width: auto;
 	height: auto;
 	-webkit-border-radius: 1em;
@@ -303,13 +310,12 @@ legend {
 	margin-bottom: 10px;
 }
 
-
 /* ---------
 Tables
 --------- */
 .table {
 	table-layout: fixed;
-    display: table;
+	display: table;
 	width: 100%;
 	-webkit-border-radius: 1em;
 	-moz-border-radius: 1em;
@@ -324,7 +330,9 @@ Tables
 	display: table-header-group;
 }
 
-.table-header-cell, .table-header-cell-left, .table-header-cell-right {
+.table-header-cell,
+.table-header-cell-left,
+.table-header-cell-right {
 	display: table-cell;
 	padding: 4px 5px;
 	color: #FFFFFF;
@@ -339,7 +347,9 @@ Tables
 	font-weight: bold;
 }
 
-.rtl .table-header-cell, .table-header-cell-left, .table-header-cell-right {
+.rtl .table-header-cell,
+.table-header-cell-left,
+.table-header-cell-right {
 	text-align: right;
 }
 
@@ -377,7 +387,8 @@ Tables
 	background-color: #DCEBFE;
 }
 
-.table-body-cell, .table-body-cell-bold {
+.table-body-cell,
+.table-body-cell-bold {
 	display: table-cell;
 	text-align: left;
 	vertical-align: middle;
@@ -387,14 +398,14 @@ Tables
 	border-right: 1px solid #FFFFFF;
 }
 
-.rtl .table-body-cell, .table-body-cell-bold {
+.rtl .table-body-cell,
+.table-body-cell-bold {
 	text-align: right;
 }
 
 .table-body-cell-bold {
 	font-weight: bold;
 }
-
 
 /* ---------
 bbCode buttons
@@ -415,7 +426,6 @@ input.button2 {
 	padding: 0.2em
 }
 
-
 /* ---------
 Privacy IP list
 --------- */
@@ -428,16 +438,16 @@ Privacy IP list
 	font-size: 11px
 }
 
-
 /* ---------
 Version
 --------- */
 .version-wrapper {
 	width: auto;
-    margin: auto;
+	margin: auto;
 }
 
-.version-text, .version-data {
+.version-text,
+.version-data {
 	width:auto;
 	height:17px;
 	text-align: center;
