--- a/pikaron/slideweuni/styles/cubes/template/event/overall_header_breadcrumbs_before.html
+++ b/pikaron/slideweuni/styles/cubes/template/event/overall_header_breadcrumbs_before.html
@@ -1,7 +1,27 @@
 {% if S_SLIDE_WEUNI_ACTIVE %}
+
 	<div class="slideweuni-headerbar" role="banner">
 		<div class="inner">
 			{% include '@pikaron_slideweuni/carousel_common.html' %}
 		</div>
 	</div>
+
+	{% DEFINE MICRODATAWE = ' itemtype="http://schema.org/ListItem" itemprop="itemListElement" itemscope=""' %}
+	{% set navlink_position = 1 %}
+	<li class="breadcrumbswe" itemscope itemtype="http://schema.org/BreadcrumbList">
+		{% if U_SITE_HOME %}
+			<span class="crumb" {{ definition.MICRODATAWE }}><a href="{{ U_SITE_HOME }}" itemtype="https://schema.org/Thing" itemscope itemprop="item" data-navbar-reference="home"><i class="icon fa-home fa-fw" aria-hidden="true"></i><span itemprop="name">{{ lang('SITE_HOME') }}</span></a><meta itemprop="position" content="{{ navlink_position }}{% set navlink_position = navlink_position + 1 %}" /></span>
+		{% endif %}
+        <!-- EVENT overall_header_breadcrumb_prepend -->        
+        <span class="crumb" {{ definition.MICRODATAWE }}><a href="{{ U_INDEX }}" itemtype="https://schema.org/Thing" itemscope itemprop="item" accesskey="h" data-navbar-reference="index">{% if not U_SITE_HOME %}<i class="icon fa-home fa-fw"></i>{% endif %}<span itemprop="name">{{ lang('INDEX') }}</span></a><meta itemprop="position" content="{{ navlink_position }}{% set navlink_position = navlink_position + 1 %}" /></span>
+		{% for navlinkss in navlinks %}
+			<!-- EVENT overall_header_navlink_prepend -->        
+			{% set NAVLINK_NAME = navlinkss.BREADCRUMB_NAME | default(navlinkss.FORUM_NAME) %}
+			{% set NAVLINK_LINK = navlinkss.U_BREADCRUMB | default(navlinkss.U_VIEW_FORUM) %}
+			<span class="crumb" {{ definition.MICRODATAWE }}{% if navlinkss.MICRODATAWE %} {{ navlinkss.MICRODATAWE }}{% endif %}><a href="{{ NAVLINK_LINK }}" itemtype="https://schema.org/Thing" itemscope itemprop="item"><span itemprop="name">{{ NAVLINK_NAME }}</span></a><meta itemprop="position" content="{{ navlink_position }}{% set navlink_position = navlink_position + 1 %}" /></span>
+			<!-- EVENT overall_header_navlink_append -->            
+		{% endfor %}
+		<!-- EVENT overall_header_breadcrumb_append -->        
+	</li>
+
 {% endif %}
