Update compatibility with NavBar Search 3.2.4.

--- a/pikaron/slideweuni/styles/Black-Silver-Slim/theme/css/slideweuni.css
+++ b/pikaron/slideweuni/styles/Black-Silver-Slim/theme/css/slideweuni.css
@@ -1,6 +1,10 @@
 /*	SlideShow for Black-Silver-Slim Styling
 ---------------------------------------------- */
 
+#search-box{
+	box-shadow: none;
+}
+
 .headerbar {
 	display: block;
 }
