Updated compatibility with NavBar Search 3.2.4.

--- a/pikaron/slideweuni/styles/we_universal/theme/css/slideweuni.css
+++ b/pikaron/slideweuni/styles/we_universal/theme/css/slideweuni.css
@@ -167,6 +167,6 @@ div.header-profile	> div.dropdown {
 	display: none !important;
 }
 
-li:not(.breadcrumbs)::before {
+#nav-breadcrumbs > li:not(.breadcrumbs)::before {
 	content: none !important;
 }
